<resources>
    <string name="app_name">Benton Enthusiast</string>
    <string name="product_name">Product</string>
    <string name="price">Price</string>
    <string name="product">Product</string>
    <string name="tips_for_your_skin">Tips</string>
    <string name="about">About</string>
    <string name="nama">Diva Irma Ayunita</string>
    <string name="email">divairmaa@yahoo.com</string>
    <string name="tab_vol">Volume</string>
    <string name="tab_fitur">Features</string>
    <string name="tab_how">How To Use</string>
    <string name="tab_ing">Ingredients</string>
    <string name="tab_rec">Recommended for</string>
    <string name="cacaotoner_name">Cacao Moist and Mild Toner 150ml</string>
    <string name="cacaotoner_price">IDR 218,571</string>
    <string name="cacaotoner_det">Benton’s Cacao Moist and Mild Toner is a lightweight and hydrating toner. With Cacao Extracts and Hyaluronic Acid, this toner replenishes moisture to skin. Various botanical extracts in the toner further help to keep skin smooth.</string>
    <string name="cacaotoner_vol">150ml / 5.07 fl.oz.</string>
    <string name="cacaotoner_fitur">For all skin types including sensitive skin, transparent liquid, white cap container</string>
    <string name="cacaotoner_how">After cleansing, apply on skin with a cotton pad or with hands and pat until absorbed</string>
    <string name="cacaotoner_ingredients">Theobroma Cacao (Cocoa) Extract, Aqua (Water), Butylene Glycol, Pentylene Glycol, 1,2-Hexanediol, Theobroma Cacao (Cocoa) Seed Extract, Sodium Hyaluronate, Salix Alba (Willow) Bark Extract, Salix Nigra (Willow) Bark Extract, Madecassoside, Theobroma Cacao (Cocoa) Flower Extract, Zanthoxylum Piperitum Fruit Extract, Pulsatilla Koreana Extract, Usnea Barbata (Lichen) Extract, Betaine, Xanthan Gum</string>
    <string name="cacaotoner_recom">- Skin with a poor oil-water balance\n
        - Oily skin that needs a light product\n
        - Skin that wants a clear skin tone with a mild hydrating product\n
        - Dull skin lacking nourishment\n
        - Skin sensitive to harmful chemicals and external stressors\n
        - Dehydrated and tight skin</string>
    <string name="cacaoserum_name">Cacao Most and Mild Serum 30ml</string>
    <string name="cacaoserum_price">IDR 206,428</string>
    <string name="cacaoserum_det">Benton’s Cacao Moist and Mild Serum is a lightweight and hydrating serum. With Cacao Extracts and Hyaluronic Acid, this serum replenishes moisture to skin. Various botanical extracts in the serum further help to keep skin smooth.</string>
    <string name="cacaoserum_vol">30ml / 1.01 fl.oz.</string>
    <string name="cacaoserum_fitur">For all skin types including sensitive skin, transparent liquid, dropper bottle</string>
    <string name="cacaoserum_how">After cleansing and toning, apply this serum at night after or in place of your essence, before moisturizing</string>
    <string name="cacaoserum_ingredients">Theobroma Cacao (Cocoa) Extract, Butylene Glycol, Aqua (Water), Dipropylene Glycol, 1,2-Hexanediol, Pentylene Glycol, Glycerin, Sodium Hyaluronate, Centella Asiatica Extract, Scutellaria Baicalensis Root Extract, Polygonum Cuspidatum Root Extract, Glycyrrhiza Glabra (Licorice) Root Extract, Camellia Sinensis Leaf Extract, Chamomilla Recutita (Matricaria) Flower Extract, Rosmarinus Officinalis (Rosemary) Leaf Extract, Theobroma Cacao (Cocoa) Seed Extract, Salix Alba (Willow) Bark Extract, Salix Nigra (Willow) Bark Extract, Dipotassium Glycyrrhizate, Theobroma Cacao (Cocoa) Flower Extract, Madecassoside, Allantoin, Zanthoxylum Piperitum Fruit Extract, Pulsatilla Koreana Extract, Usnea Barbata (Lichen) Extract, Betaine, Panthenol, Carbomer, Arginine</string>
    <string name="cacaoserum_recom">- Dull skin lacking nourishment\n
        - Skin with a poor water-oil balance\n
        - Skin that wants a clear skin tone with a mild hydrating product\n
        - Dehydrated and tight skin\n
        - Skin sensitive to harmful chemicals and external stressors\n
        - Skin that needs a light product</string>
    <string name="cacaocream_name">Cacao Most and Mild Cream 50g</string>
    <string name="cacaocream_price">IDR 182,857</string>
    <string name="cacaocream_det"> Cacao Moist and Mild Cream is a lightweight moisturizer with soft texture. With Cacao Extracts and Hyaluronic Acid, this cream provides moisture to skin.  Various botanical extracts in the cream further help to keep skin smooth.</string>
    <string name="cacaocream_vol">50g</string>
    <string name="cacaocream_fitur">For all skin types including sensitive skin, white cream, tube type</string>
    <string name="cacaocream_how">Apply a suitable amount to face and gently tap until absorbed</string>
    <string name="cacaocream_ingredients">Theobroma Cacao (Cocoa) Extract, Theobroma Cacao (Cocoa) Seed Butter, Butylene Glycol, Glycerin, Aqua (Water), Sorbitan Olivate, 1,2-Hexanediol,  Pentylene Glycol, Theobroma Cacao (Cocoa) Seed Extract, Zanthoxylum Piperitum Fruit Extract, Pulsatilla Koreana Extract, Usnea Barbata (Lichen) Extract, Sodium Hyaluronate, Polyglutamic Acid, Madecassoside, Beta-Glucan, Carbomer, Arginine, Xanthan Gum</string>
    <string name="cacaocream_recom">- Lightweight Texture Suitable for S/S Season\n
        - Dewy Finish\n
        - Hydrating\n
        - Skin Water-Oil Balance\n
        - Mild Formula (No Coloring, No Fragrance)</string>
    <string name="bf_name">Dear My Best Friend Bar-Soap</string>
    <string name="bf_price">IDR 160,714</string>
    <string name="bf_det">DEAR MY BEST FRIEND BAR is a natural soap for both body and face. We wished to present a rest to your BF, body and face, and hence named the soap ‘Dear My Best Friend Bar’. Dear My Best Friend Bar (aka BF Bar) is Benton’s first naturally-derived soap made with a vegetable oil base and various botanical ingredients, which enable moisturizing cleansing.</string>
    <string name="bf_vol">85g / 3.00 oz</string>
    <string name="bf_fitur">For all skin types including sensitive skin</string>
    <string name="bf_how">Lather enough and cleanse</string>
    <string name="bf_ingredients">Cocos Nucifera (Coconut) Oil, Elaeis Guineensis (Palm) Oil, Olea Europaea (Olive) Fruit Oil, Ricinus Communis (Castor) Seed Oil, Vitis Vinifera (Grape) Seed Oil, Macadamia Integrifolia Seed Oil, Butyrospermum Parkii (Shea) Butter, Oryza Sativa (Rice) Bran Oil, Water (Aqua), Sodium Hydroxide, Ocimum Basilicum (Basil) Extract, Avena Sativa (Oat) Kernel Flour, Citrus Unshiu Peel Extract, Theobroma Cacao (Cocoa) Seed Powder, Calamine, Persea Gratissima (Avocado) Oil, Moringa Oleifera Leaf Extract, Papain, Hamamelis Virginiana (Witch Hazel) Leaf Extract, Honey, Melaleuca Alternifolia (Tea Tree) Extract, Propolis Extract, Kaolin Centella Asiatica Extract, Laminaria Japonica Extract, Lavandula Angustifolia (Lavender) Oil, Chamaecyparis Obtusa Oil</string>
    <string name="bf_recom">- Dry and sensitive skin feeling stripped after cleansing\n
        - Oily face or oily body parts\n
        - Blemished skin : face, chest, or back\n
        - Bumpy and rough skin\n
        - Skin tired from body wastes and external stressors\n
        - Skin that wants a healthy, naturally derived soap</string>
    <string name="coco_name">Shea Butter and Coconut Hand Cream 50g</string>
    <string name="coco_price">IDR 117,857</string>
    <string name="coco_det">Benton Shea Butter and Coconut Hand Cream is a naturally derived product made up of 20percent Shea Butter and 3percent Coconut Oil. This hand cream keeps hands soft and silky. Adenosine in the formula further helps smooth hands.</string>
    <string name="coco_vol">50g / 1.76 fl.oz</string>
    <string name="coco_fitur">For all skin types</string>
    <string name="coco_how">Take an appropriate amount of the product and apply to your hand, then softly tab to enhance the absorption.</string>
    <string name="coco_ingredients">Aqua (Water), Butyrospermum Parkii (Shea) Butter, Caprylic/Capric Triglyceride, Glycerin, Methylpropanediol, Cocos Nucifera (Coconut) Oil, Cetearyl Alcohol, Pentylene Glycol, Cetearyl Olivate, Sorbitan Olivate,
               Helianthus Annuus (Sunflower) Seed Oil, Centella Asiatica Extract, Scutellaria Baicalensis Root Extract,
               Polygonum Cuspidatum Root Extract, Glycyrrhiza Glabra (Licorice) Root Extract, Camellia Sinensis Leaf Extract,
               Rosmarinus Officinalis (Rosemary) Leaf Extract, Chamomilla Recutita (Matricaria) Flower Extract,
               Butyrospermum Parkii (Shea) Butter Extract, 1,2- Hexanediol, Zanthoxylum Piperitum Fruit Extract,
               Pulsatilla Koreana Extract, Usnea Barbata (Lichen) Extract, Butylene Glycol, Carbomer, Arginine,
               Xanthan Gum, Adenosine</string>
    <string name="coco_recom">-</string>
    <string name="olive_name">Shea Butter and Olive Hand Cream 50g</string>
    <string name="olive_price">IDR 125,714</string>
    <string name="olive_det">Benton Shea Butter and Olive Hand Cream is a naturally derived product with a refreshing scent made up of Shea Butter, Olive Oil and Hyaluronic Acid. This hand cream helps keep hands fresh and moisturized without being sticky.</string>
    <string name="olive_vol">50g / 1.76 fl.oz</string>
    <string name="olive_fitur">For all skin types</string>
    <string name="olive_how">Take an appropriate amount of the product and apply to your hand, then softly tab to enhance the absorption.</string>
    <string name="olive_ingredients">Aqua (Water), Butyrospermum Parkii (Shea) Butter (10%), Glycerin, Caprylic/Capric Triglyceride, Olea Europaea (Olive) Fruit Oil (2%), Cetearyl Alcohol, Sodium Hyaluronate, Panthenol, Cetearyl Olivate, Sorbitan Olivate, Butyrospermum Parkii (Shea) Butter Extract, Zanthoxylum Piperitum Fruit Extract, Pulsatilla Koreana Extract, Usnea Barbata (Lichen) Extract, 1,2-Hexanediol, Caprylyl Glycol, Carbomer, Arginine, Butylene Glycol, Tocopherol, Citrus Nobilis (Mandarin Orange) Peel Oil, Rosmarinus Officinalis (Rosemary) Leaf Oil, Pelargonium Graveolens Flower Oil</string>
    <string name="olive_recom">-</string>
    <string name="ec_name">Fermentation Eye Cream 30g</string>
    <string name="ec_price">IDR 289,285</string>
    <string name="ec_det">Benton Fermentation Eye Cream is a premium eye cream containing Galactomyces Ferment Filtrate, Bifida Ferment Lysate, sh-Oligopeptide-1, and Ceramides. This eye cream helps to achieve smooth and youthful eye areas.</string>
    <string name="ec_vol">30g / 1.01 fl oz</string>
    <string name="ec_fitur">For all skin types</string>
    <string name="ec_how">Take an appropriate amount of the product and apply to the area around your eyes, then softly tab to enhance the absorption.</string>
    <string name="fes_name">Fermentation Essence 100ml</string>
    <string name="fes_price">IDR 308,571</string>
    <string name="fes_det">Benton Fermentation Essence is a premium first essence containing Galactomyces Ferment Filtrate, Bifida Ferment Lysate, sh-Oligopeptide-1, and Ceramides. This essence helps to achieve smooth and youthful skin.</string>
    <string name="fes_vol">100ml / 3.38 oz</string>
    <string name="fes_fitur">For all skin types including sensitive skin, white translucent, liquid type</string>
    <string name="fes_how">After washing your face, pump 1-2 times and rub evenly spread to your face. Then, gently tab to enhance the absorption.</string>
    <string name="fes_ingredients">Galactomyces Ferment Filtrate, Aqua (Water), Butylene Glycol, Pentylene Glycol, Glycerin, 1,2-Hexanediol,
               Bifida Ferment Lysate, Ceramide NP, Althaea Rosea Root Extract, Aloe Barbadensis Leaf Extract, Betaine,
               Panthenol, Allantoin, Sodium Hyaluronate, sh-Oligopeptide-1, Zanthoxylum Piperitum Fruit Extract, Pulsatilla Koreana Extract,
               Usnea Barbata (Lichen) Extract, Adenosine, Arginine, Xanthan Gum, Hydrogenated Lecithin, Polysorbate 20, Lecithin</string>
</resources>